Use immutable Map factory methods.